Fix git repo URL, begin Angular structure/routing

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-angular-boilerplate",
+  "name": "new-angularjs-boilerplate",
   "version": "0.1.0",
   "homepage": "https://github.com/jakemmarsh/new-angular-boilerplate",
   "authors": [
