--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
   "engines": {
     "node": ">=0.10.26"
   },
-  "dependencies": {
-    "express": "^4.7.2",
-    "morgan": "^1.2.2",
-    "supervisor": "^0.6.0"
-  },
   "devDependencies": {
-    "bower": "^1.3.8",
     "gulp": "^3.8.6",
     "gulp-browserify": "^0.5.0",
     "gulp-sass": "^0.7.2",
-    "watchify": "^1.0.1"
-  },
-  "scripts": {
-    "start": "supervisor server.js"
+    "watchify": "^1.0.1",
+    "angular": "^1.2.19",
+    "angular-ui-router": "^0.2.10",
+    "gulp-jshint": "^1.8.3",
+    "connect-livereload": "^0.4.0",
+    "morgan": "^1.2.2",
+    "express": "^4.7.2",
+    "gulp-livereload": "^2.1.0",
+    "tiny-lr": "0.0.9",
+    "gulp-ng-annotate": "^0.3.0",
+    "browserify-fs": "^1.0.0",
+    "gulp-uglify": "^0.3.1",
+    "gulp-rename": "^1.2.0"
   }
 }
