--- a/package.json
+++ b/package.json
@@ -21,21 +21,27 @@
     "node": ">=0.10.26"
   },
   "devDependencies": {
-    "gulp": "^3.8.6",
-    "gulp-browserify": "^0.5.0",
-    "gulp-sass": "^0.7.2",
-    "watchify": "^1.0.1",
     "angular": "^1.2.19",
     "angular-ui-router": "^0.2.10",
-    "gulp-jshint": "^1.8.3",
-    "connect-livereload": "^0.4.0",
-    "morgan": "^1.2.2",
-    "express": "^4.7.2",
-    "gulp-livereload": "^2.1.0",
-    "tiny-lr": "0.0.9",
-    "gulp-ng-annotate": "^0.3.0",
+    "browserify": "^5.9.1",
     "browserify-fs": "^1.0.0",
+    "connect-livereload": "^0.4.0",
+    "express": "^4.7.2",
+    "gulp": "^3.8.6",
+    "gulp-browserify": "^0.5.0",
+    "gulp-jshint": "^1.8.3",
+    "gulp-livereload": "^2.1.0",
+    "gulp-ng-annotate": "^0.3.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^0.7.2",
     "gulp-uglify": "^0.3.1",
-    "gulp-rename": "^1.2.0"
+    "karma": "^0.12.21",
+    "karma-browserify": "^0.2.1",
+    "morgan": "^1.2.2",
+    "tiny-lr": "0.0.9",
+    "watchify": "^1.0.1"
+  },
+  "scripts": {
+    "test": "karma start karma.conf"
   }
 }
