--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
   "devDependencies": {
     "angular": "^1.2.19",
     "angular-ui-router": "^0.2.10",
+    "browserify": "^5.10.0",
     "connect-livereload": "^0.4.0",
     "express": "^4.7.2",
     "gulp": "^3.8.6",
-    "gulp-browserify": "^0.5.0",
     "gulp-jshint": "^1.8.3",
     "gulp-livereload": "^2.1.0",
     "gulp-ng-annotate": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^0.7.2",
+    "gulp-streamify": "0.0.5",
     "gulp-uglify": "^0.3.1",
     "karma": "^0.12.21",
     "karma-browserify": "^0.2.1",
     "morgan": "^1.2.2",
-    "tiny-lr": "0.0.9"
+    "tiny-lr": "0.0.9",
+    "vinyl-source-stream": "^0.1.1"
   },
   "scripts": {
     "test": "karma start karma.conf"
