--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "connect-livereload": "^0.4.0",
     "express": "^4.7.2",
     "gulp": "^3.8.6",
+    "gulp-angular-templatecache": "^1.3.0",
     "gulp-jshint": "^1.8.3",
     "gulp-livereload": "^2.1.0",
     "gulp-rename": "^1.2.0",
