Add framework and examples for both unit testing and e2e testing

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,5 +17,14 @@
   "unused": true,
   "strict": true,
   "trailing": true,
-  "smarttabs": true
+  "smarttabs": true,
+  "globals": {
+    "describe":   false,
+    "it":         false,
+    "before":     false,
+    "beforeEach": false,
+    "after":      false,
+    "afterEach":  false,
+    "expect":     false
+  }
 }
