--- a/package.json
+++ b/package.json
@@ -34,14 +34,25 @@
     "gulp-sass": "^0.7.2",
     "gulp-streamify": "0.0.5",
     "karma": "^0.12.21",
-    "karma-browserify": "^0.2.1",
     "morgan": "^1.2.2",
     "run-sequence": "^0.3.6",
     "tiny-lr": "0.0.9",
     "uglifyify": "^2.5.0",
-    "vinyl-source-stream": "^0.1.1"
+    "vinyl-source-stream": "^0.1.1",
+    "angular-mocks": "^1.2.22",
+    "gulp-karma": "0.0.4",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "karma-bro": "^0.7.0",
+    "protractor": "^1.2.0",
+    "gulp-protractor": "0.0.11"
   },
   "scripts": {
-    "test": "karma start karma.conf"
+    "pretest": "npm install",
+    "test": "karma start test/karma.conf.js",
+
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "npm run protractor test/protractor.conf.js"
   }
 }
