--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "protractor": "^1.2.0",
     "gulp-protractor": "0.0.11",
     "gulp-imagemin": "^1.0.1",
-    "imagemin-pngcrush": "^0.1.0"
+    "imagemin-pngcrush": "^0.1.0",
+    "gulp-if": "^1.2.4"
   },
   "scripts": {
     "pretest": "npm install",
