--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "angularjs-gulp-browserify-boilerplate",
   "version": "0.1.0",
   "author": "Jake Marsh <jakemmarsh@gmail.com>",
+  "contributors": [
+    {
+      "name": "Solomon Hawk",
+      "email": "solomon.hawk@viget.com",
+      "url": "http://www.solomohawk.com/"
+    }
+  ],
   "description": "Boilerplate using AngularJS, SASS, Gulp, and Browserify while also utilizing best practices.",
   "repository": {
     "type": "git",
@@ -29,7 +36,7 @@
     "browserify-ngannotate": "^0.1.0",
     "connect-livereload": "^0.4.0",
     "express": "^4.7.2",
-    "gulp": "^3.8.6",
+    "gulp": "^3.8.8",
     "gulp-angular-templatecache": "^1.3.0",
     "gulp-jshint": "^1.8.3",
     "gulp-livereload": "^2.1.0",
@@ -50,9 +57,18 @@
     "karma-bro": "^0.7.0",
     "protractor": "^1.2.0",
     "gulp-protractor": "0.0.11",
-    "gulp-imagemin": "^1.0.1",
+    "gulp-imagemin": "^1.1.0",
     "imagemin-pngcrush": "^0.1.0",
-    "gulp-if": "^1.2.4"
+    "gulp-if": "^1.2.5",
+    "jshint-stylish": "^1.0.0",
+    "watchify": "^2.0.0",
+    "gulp-changed": "^1.0.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-notify": "^2.0.0",
+    "browser-sync": "^1.5.8",
+    "gulp-util": "^3.0.1",
+    "pretty-hrtime": "^0.2.2",
+    "del": "^0.1.3"
   },
   "scripts": {
     "pretest": "npm install",
