--- a/package.json
+++ b/package.json
@@ -68,7 +68,19 @@
     "browser-sync": "^1.5.8",
     "gulp-util": "^3.0.1",
     "pretty-hrtime": "^0.2.2",
-    "del": "^0.1.3"
+    "del": "^0.1.3",
+    "browserify-shim": "^3.8.0"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browser": {
+    "angular": "./node_modules/angular/angular.js"
+  },
+  "browserify-shim": {
+    "angular": "angular"
   },
   "scripts": {
     "pretest": "npm install",
