--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "gulp-sourcemaps": "^1.3.0",
     "imagemin-pngcrush": "^0.1.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
@@ -69,6 +70,7 @@
     "tiny-lr": "0.0.9",
     "uglifyify": "^2.5.0",
     "vinyl-source-stream": "^0.1.1",
+    "vinyl-buffer": "^1.0.0",
     "watchify": "^2.0.0"
   },
   "browserify": {
