--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "gulp-sourcemaps": "^1.3.0",
+    "gulp-gzip": "^0.0.8",
     "imagemin-pngcrush": "^0.1.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
