--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "uglifyify": "^2.5.0",
     "vinyl-source-stream": "^0.1.1",
     "vinyl-buffer": "^1.0.0",
-    "watchify": "^2.0.0"
+    "watchify": "^2.0.0",
+    "karma-coverage": "0.2.6",
+    "browserify-istanbul": "^0.2.0"
   },
   "browserify": {
     "transform": [
