--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "imagemin-pngcrush": "^0.1.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
-    "karma-bro": "^0.7.0",
     "karma-chrome-launcher": "^0.1.4",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
@@ -74,7 +73,8 @@
     "vinyl-buffer": "^1.0.0",
     "watchify": "^2.0.0",
     "karma-coverage": "0.2.6",
-    "browserify-istanbul": "^0.2.0"
+    "browserify-istanbul": "^0.2.0",
+    "karma-browserify": "^4.0.0"
   },
   "browserify": {
     "transform": [
