--- a/package.json
+++ b/package.json
@@ -36,14 +36,17 @@
     "brfs": "^1.2.0",
     "browser-sync": "^1.5.8",
     "browserify": "^5.10.0",
+    "browserify-istanbul": "^0.2.0",
     "browserify-ngannotate": "^0.1.0",
     "browserify-shim": "^3.8.0",
+    "debowerify": "^1.2.0",
     "del": "^0.1.3",
     "express": "^4.7.2",
     "gulp": "^3.8.8",
     "gulp-angular-templatecache": "^1.3.0",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-changed": "^1.0.0",
+    "gulp-gzip": "^0.0.8",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^1.1.0",
     "gulp-jshint": "^1.8.3",
@@ -52,15 +55,16 @@
     "gulp-protractor": "0.0.11",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-gzip": "^0.0.8",
     "imagemin-pngcrush": "^0.1.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
+    "karma-browserify": "^4.0.0",
     "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "0.2.6",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "morgan": "^1.2.2",
@@ -69,12 +73,9 @@
     "run-sequence": "^0.3.6",
     "tiny-lr": "0.0.9",
     "uglifyify": "^2.5.0",
-    "vinyl-source-stream": "^0.1.1",
     "vinyl-buffer": "^1.0.0",
-    "watchify": "^2.0.0",
-    "karma-coverage": "0.2.6",
-    "browserify-istanbul": "^0.2.0",
-    "karma-browserify": "^4.0.0"
+    "vinyl-source-stream": "^0.1.1",
+    "watchify": "^2.0.0"
   },
   "browserify": {
     "transform": [
