--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "browserify-istanbul": "^0.2.0",
     "browserify-ngannotate": "^0.1.0",
     "browserify-shim": "^3.8.0",
+    "bulk-require": "^0.2.1",
+    "bulkify": "^1.1.1",
     "debowerify": "^1.2.0",
     "del": "^0.1.3",
     "express": "^4.7.2",
