--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "imagemin-pngcrush": "^0.1.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
+    "karma-babel-preprocessor": "^4.0.1",
     "karma-browserify": "^4.0.0",
     "karma-chrome-launcher": "^0.1.4",
     "karma-coverage": "0.2.6",
