--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "del": "^0.1.3",
     "express": "^4.7.2",
     "gulp": "^3.8.8",
-    "gulp-angular-templatecache": "^1.3.0",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-changed": "^1.0.0",
     "gulp-gzip": "^0.0.8",
@@ -72,6 +71,7 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "morgan": "^1.2.2",
+    "partialify": "^3.1.3",
     "pretty-hrtime": "^0.2.2",
     "protractor": "^1.2.0",
     "run-sequence": "^0.3.6",
