--- a/package.json
+++ b/package.json
@@ -1,30 +1,12 @@
 {
-  "name": "angularjs-gulp-browserify-boilerplate",
+  "name": "loklak_webclient",
   "version": "0.1.0",
-  "author": "Jake Marsh <jakemmarsh@gmail.com>",
-  "contributors": [
-    {
-      "name": "Solomon Hawk",
-      "email": "solomon.hawk@viget.com",
-      "url": "http://www.solomohawk.com/"
-    }
-  ],
-  "description": "Boilerplate using AngularJS, SASS, Gulp, and Browserify while also utilizing best practices.",
+  "author": "Julian Renard <renard.julian@gmail.com>",
+  "description": "A webclient for loklak server.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jakemmarsh/angularjs-gulp-browserify-boilerplate.git"
+    "url": "https://github.com/loklak/loklak_webclient.git"
   },
-  "keywords": [
-    "express",
-    "gulp",
-    "browserify",
-    "angular",
-    "sass",
-    "karma",
-    "jasmine",
-    "protractor",
-    "boilerplate"
-  ],
   "private": true,
   "engines": {
     "node": ">=0.12.x"
