--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular": "^1.3.15",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
+    "bootstrap-sass": "~3.3.4",
     "babelify": "^5.0.4",
     "brfs": "^1.2.0",
     "browser-sync": "^1.5.8",
