--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "imagemin-pngcrush": "^0.1.0",
-    "isparta": "git://github.com/douglasduteil/isparta",
+    "isparta": "git+https://github.com/douglasduteil/isparta",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
     "karma-babel-preprocessor": "^4.0.1",
     "karma-browserify": "^4.0.0",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-coverage": "git://github.com/douglasduteil/karma-coverage#next",
+    "karma-coverage": "git+https://github.com/douglasduteil/karma-coverage#next",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "morgan": "^1.2.2",
