--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
   "dependencies": {
     "angular-loading-bar": "^0.7.1",
     "angular-moment": "^0.10.0",
-    "isparta": "^3.0.3"
+    "node-env-file": "^0.1.7"
   }
 }
