--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "dependencies": {
     "angular-loading-bar": "^0.7.1",
     "angular-moment": "^0.10.0",
-    "node-env-file": "^0.1.7"
+    "node-env-file": "^0.1.7",
+    "dotenv": "^1.1.0"
   }
 }
