Fixes #13, #5. Search works again!
Constants are stored in configFile.json.
Create your custom settings file by `cp configFile.json
custom_configFile.json
Edit custom_configFile.json to put in custom settings.
I changed constants.js to read this json file, as the fs.readFileSync
used internally by dotenv causes some errors when used with browserify.

--- a/package.json
+++ b/package.json
@@ -72,8 +72,6 @@
   },
   "dependencies": {
     "angular-loading-bar": "^0.7.1",
-    "angular-moment": "^0.10.0",
-    "node-env-file": "^0.1.7",
-    "dotenv": "^1.1.0"
+    "angular-moment": "^0.10.0"
   }
 }
