--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   },
   "scripts": {
     "pretest": "npm install",
-    "test": "karma start test/karma.conf.js",
+    "test": "node test/test.js",
     "preprotractor": "npm run update-webdriver",
     "protractor": "npm run protractor test/protractor.conf.js"
   },
