--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "protractor": "npm run protractor test/protractor.conf.js"
   },
   "dependencies": {
+    "angular-animate": "^1.3.15",
     "angular-loading-bar": "^0.7.1",
     "angular-moment": "^0.10.0",
     "bootstrap": "^3.3.4",
