--- a/package.json
+++ b/package.json
@@ -77,8 +77,10 @@
     "angular-loading-bar": "^0.7.1",
     "angular-moment": "^0.10.0",
     "bootstrap": "^3.3.4",
+    "imagesloaded": "^3.1.8",
     "jquery": "^2.1.4",
     "jquery-browserify": "^1.8.1",
+    "masonry-layout": "^3.3.0",
     "moment": "^2.10.2"
   },
   "browserify-shim": {
