--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "angular-loading-bar": "^0.7.1",
     "angular-moment": "^0.10.0",
     "bootstrap": "^3.3.4",
+    "gulp-express": "^0.3.5",
     "imagesloaded": "^3.1.8",
     "jquery": "^2.1.4",
     "jquery-browserify": "^1.8.1",
