Added twitter auth

--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,11 @@
   "homepage": "https://github.com/loklak/loklak_webclient",
   "dependencies": {
     "connect-livereload": "^0.5.3",
-    "express": "^4.12.4",
-    "morgan": "^1.5.3"
+    "ejs": "^2.3.1",
+    "express": "~3.0.0",
+    "morgan": "^1.5.3",
+    "passport": "^0.2.2",
+    "passport-twitter": "^1.0.3",
+    "twitter": "^1.2.5"
   }
 }
