--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,14 @@
   },
   "homepage": "https://github.com/loklak/loklak_webclient",
   "dependencies": {
+    "body-parser": "^1.12.4",
     "connect-livereload": "^0.5.3",
+    "cookie-parser": "^1.3.5",
+    "cookie-session": "^1.1.0",
     "ejs": "^2.3.1",
-    "express": "~3.0.0",
+    "express": "~4.12.4",
+    "express-session": "^1.11.2",
+    "method-override": "^2.3.3",
     "morgan": "^1.5.3",
     "passport": "^0.2.2",
     "passport-twitter": "^1.0.3",
