Removed keys. Moved to custom_configFile.json
Do a `cp configFile.json custom_configFile.json` and add the keys of
your twitter app to custom_configFile.json

--- a/configFile.json
+++ b/configFile.json
@@ -1,4 +1,7 @@
 {
 	"apiUrl": "http://localhost:9100/api/",
-	"domain": "http://localhost:3001"
+	"domain": "http://localhost:3001",
+	"twitterConsumerKey": "<KEY HERE>",
+	"twitterConsumerSecret": "<KEY HERE>",
+	"twitterCallbackUrl": "http://localhost:3000/auth/twitter/callback"
 }
