Partial features to #71
Moved topbar and sidebar to index.html
Created an empty controller for the wall
Created a new route for Wall
Created a landing page for the wall
Created a basic getting started view (See issue)
Used ngTagsInput for tags
Used bootstrap-colorpicker-module for the color picker

--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "jquery": "^2.1.4",
     "jquery-browserify": "^1.8.1",
     "masonry-layout": "^3.3.0",
-    "moment": "^2.10.2"
+    "moment": "^2.10.2",
+    "ng-tags-input": "^2.3.0"
   },
   "browserify-shim": {
     "jQuery": "global:$",
