--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.5.3",
     "passport": "^0.2.2",
     "passport-twitter": "^1.0.3",
+    "request": "^2.57.0",
     "twitter": "^1.2.5"
   }
 }
