--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "angular": "^1.3.15",
+    "angular-leaflet-directive": "~0.7.10",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
     "babelify": "^5.0.4",
