--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   },
   "devDependencies": {
     "angular": "^1.3.15",
+    "angular-leaflet-directive": "~0.7.10",
+    "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
     "babelify": "^5.0.4",
+    "bootstrap-sass": "~3.3.4",
     "brfs": "^1.2.0",
     "browser-sync": "^1.5.8",
     "browserify": "^5.10.0",
     "browserify-istanbul": "^0.2.0",
     "browserify-ngannotate": "^0.1.0",
+    "browserify-shim": "^3.8.6",
     "bulk-require": "^0.2.1",
+    "bulkify": "^1.1.1",
     "debowerify": "^1.2.0",
     "del": "^0.1.3",
     "express": "^4.7.2",
@@ -42,7 +47,9 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "imagemin-pngcrush": "^0.1.0",
     "isparta": "git+https://github.com/douglasduteil/isparta",
+    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
     "morgan": "^1.2.2",
     "pretty-hrtime": "^0.2.2",
@@ -70,6 +77,7 @@
     "imagesloaded": "^3.1.8",
     "jquery": "^2.1.4",
     "jquery-browserify": "^1.8.1",
+    "masonry-layout": "^3.3.0",
     "moment": "^2.10.2",
     "ng-tags-input": "^2.3.0"
   },
