--- a/configFile.json
+++ b/configFile.json
@@ -7,5 +7,6 @@
 	"oauthProxyUrl": "http://localhost:3002/oauthproxy",
 	"oauthProxyRedirectUrl": "http://localhost:3002/proxy",
 	"oauthProxyPort": "3002",
-	"gulpDevExpressPort": "3001"
+	"gulpDevExpressPort": "3001",
+	"linkDebuggingServicePort": "8061",
 }
