--- a/configFile.json
+++ b/configFile.json
@@ -8,5 +8,6 @@
 	"oauthProxyRedirectUrl": "http://localhost:3002/proxy",
 	"oauthProxyPort": "3002",
 	"gulpDevExpressPort": "3001",
+	"linkDebuggingServiceHost":"http://localhost",
 	"linkDebuggingServicePort": "8061"
 }
