--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ before_script:
   - npm install -g gulp
 script:
   - npm test
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/4d7532d96e0012e71442
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
