--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "jquery-browserify": "^1.8.1",
     "masonry-layout": "^3.3.0",
     "moment": "^2.10.2",
-    "ng-tags-input": "^2.3.0"
+    "ng-tags-input": "^2.3.0",
+    "sync-request": "^2.0.1"
   },
   "browserify-shim": {
     "jQuery": "global:$",
