Fixes #142 Removes unwanted components and libraries needed from npm

--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
     "babelify": "^5.0.4",
-    "bootstrap-sass": "~3.3.4",
     "brfs": "^1.2.0",
     "browser-sync": "^1.5.8",
     "browserify": "^5.10.0",
     "browserify-istanbul": "^0.2.0",
     "browserify-ngannotate": "^0.1.0",
-    "browserify-shim": "^3.8.6",
     "bulk-require": "^0.2.1",
     "bulkify": "^1.1.1",
     "debowerify": "^1.2.0",
@@ -40,13 +38,11 @@
     "gulp-minify-css": "^1.1.1",
     "gulp-notify": "^2.0.0",
     "gulp-protractor": "0.0.11",
-    "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
-    "imagemin-pngcrush": "^0.1.0",
     "isparta": "git+https://github.com/douglasduteil/isparta",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
@@ -56,10 +52,10 @@
     "photoswipe": "4.0.7",
     "run-sequence": "^0.3.6",
     "tiny-lr": "0.0.9",
-    "uglifyify": "^2.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.0.0"
+    "watchify": "^2.0.0",
+    "bootstrap-sass": "^3.3.5"
   },
   "scripts": {
     "pretest": "npm install",
@@ -75,14 +71,14 @@
     "bootstrap": "^3.3.4",
     "chart.js": "^1.0.2",
     "gulp-nodemon": "^2.0.3",
-    "imagesloaded": "^3.1.8",
     "jquery": "^2.1.4",
-    "jquery-browserify": "^1.8.1",
     "masonry-layout": "^3.3.0",
     "moment": "^2.10.2",
     "ng-tags-input": "^2.3.0",
     "sync-request": "^2.0.1",
-    "twitter-text": "^1.12.0"
+    "twitter-text": "^1.12.0",
+    "browserify-shim": "^3.8.9",
+    "jquery-browserify": "^1.8.1"
   },
   "browserify-shim": {
     "jQuery": "global:$",
