--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "angular-animate": "^1.3.15",
+    "angular-base64-upload": "^0.1.11",
     "angular-google-picker": "^0.2.0",
     "angular-loading-bar": "^0.7.1",
     "angular-moment": "^0.10.0",
