--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "angular-loading-bar": "^0.7.1",
     "angular-moment": "^0.10.0",
     "angular-resource": "^1.4.3",
+    "autolinker": "^0.18.1",
     "bootstrap": "^3.3.4",
     "browserify-shim": "^3.8.9",
     "chart.js": "^1.0.2",
