--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
     "babelify": "^5.0.4",
+    "bootstrap-sass": "^3.3.5",
     "brfs": "^1.2.0",
     "browser-sync": "^1.5.8",
     "browserify": "^5.10.0",
@@ -38,7 +39,7 @@
     "gulp-minify-css": "^1.1.1",
     "gulp-notify": "^2.0.0",
     "gulp-protractor": "0.0.11",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
@@ -47,15 +48,14 @@
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.21",
     "morgan": "^1.2.2",
+    "photoswipe": "4.0.7",
     "pretty-hrtime": "^0.2.2",
     "protractor": "^1.2.0",
-    "photoswipe": "4.0.7",
     "run-sequence": "^0.3.6",
     "tiny-lr": "0.0.9",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.0.0",
-    "bootstrap-sass": "^3.3.5"
+    "watchify": "^2.0.0"
   },
   "scripts": {
     "pretest": "npm install",
