Implemented local auth with passportjs and jwt
User should have mongodb installed, test db is used
Then they should change the jwt secret string in
custom_configFile.json.

--- a/configFile.json
+++ b/configFile.json
@@ -9,5 +9,6 @@
 	"oauthProxyPort": "3002",
 	"gulpDevExpressPort": "3001",
 	"linkDebuggingServiceHost":"http://localhost",
-	"linkDebuggingServicePort": "8061"
+	"linkDebuggingServicePort": "8061",
+  "jwtsecret": "CHANGE_THE_SECRET"
 }
