--- a/package.json
+++ b/package.json
@@ -55,7 +55,16 @@
     "tiny-lr": "0.0.9",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.0.0"
+    "watchify": "^2.0.0",
+    
+    "body-parser": "^1.15.1",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.1.1",
+    "express-jwt": "^3.0.1",
+    "jsonwebtoken": "^5.0.4",
+    "mongoose": "^4.1.2",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "pretest": "npm install",
