Added email verification and validation
Used nodemailer for email sending using gmail smtp

Shows Menu after log in through email

Replaced twitterSession rootscope variable with
islogged in which calls the auth service so that
the menu icons show and the default image is
the loklak mascot

Also removed the center loklak icon for now as
it always shows up together with the spinner

--- a/configFile.json
+++ b/configFile.json
@@ -10,5 +10,7 @@
 	"gulpDevExpressPort": "3001",
 	"linkDebuggingServiceHost":"http://localhost",
 	"linkDebuggingServicePort": "8061",
-  "jwtsecret": "CHANGE_THE_SECRET"
+  "jwtsecret": "CHANGE_THE_SECRET",
+  "emailID": "CHANGE_THE_EMAIL_ID",
+  "emailPW": "CHANGE_THE_EMAIL_PW"
 }
