Revert "Merge pull request #615 from leonmak/ReportPageChanges"
This reverts commit 15fbafbeaddb5aadf5857605dda3f5a9f19aa29b, reversing
changes made to 9521fa5bd05dbe5606c45674ce061578c4fd22c2.

Revert "Merge pull request #614 from leonmak/WallStorage"

This reverts commit 9521fa5bd05dbe5606c45674ce061578c4fd22c2, reversing
changes made to 5e0da3424dc1043c826b0ac2e40df9e86e79b7a0.

Revert "Merge pull request #610 from leonmak/MenuFix"

This reverts commit 5e0da3424dc1043c826b0ac2e40df9e86e79b7a0, reversing
changes made to ba3c7fb8b8df8171987239daf9a9fb993b2bbdb0.

Revert "Merge pull request #604 from leonmak/UserAccountsMongoDB"

This reverts commit ba3c7fb8b8df8171987239daf9a9fb993b2bbdb0, reversing
changes made to ebb72d26dc0f300bd60e1fa6488ca9dc2c203927.

Revert "Merge pull request #603 from leonmak/home-page-changes"

This reverts commit 6d2fd2bc8192d7aac39fccb3b96909eb03c6e52b, reversing
changes made to 46777f81cbc7998b8c68ac1cba7a035593c867cd.

--- a/configFile.json
+++ b/configFile.json
@@ -9,8 +9,5 @@
 	"oauthProxyPort": "3002",
 	"gulpDevExpressPort": "3001",
 	"linkDebuggingServiceHost":"http://localhost",
-	"linkDebuggingServicePort": "8061",
-  "jwtsecret": "CHANGE_THE_SECRET",
-  "emailID": "CHANGE_THE_EMAIL_ID",
-  "emailPW": "CHANGE_THE_EMAIL_PW"
+	"linkDebuggingServicePort": "8061"
 }
