--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": ">=0.12.x"
   },
-  "devDependencies": {
+  "dependencies": {
     "angular": "^1.3.15",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
@@ -55,15 +55,7 @@
     "tiny-lr": "0.0.9",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.0.0"
-  },
-  "scripts": {
-    "pretest": "npm install",
-    "test": "node test/test.js",
-    "preprotractor": "npm run update-webdriver",
-    "protractor": "npm run protractor test/protractor.conf.js"
-  },
-  "dependencies": {
+    "watchify": "^2.0.0",
     "angular-animate": "^1.3.15",
     "angular-base64-upload": "^0.1.11",
     "angular-google-picker": "^0.2.0",
@@ -83,6 +75,13 @@
     "ng-tags-input": "^2.3.0",
     "sync-request": "^2.0.1",
     "twitter-text": "^1.12.0"
+  },
+  "scripts": {
+    "pretest": "npm install",
+    "test": "node test/test.js",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "npm run protractor test/protractor.conf.js",
+    "postinstall": "./install_heroku_script.sh"
   },
   "browserify-shim": {
     "jQuery": "global:$",
