--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ notifications:
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
+    after_success:
+      - bash <(curl -s https://codecov.io/bash)
